http://li3.me/docs/specs/accepted/LSR-0-coding.md

New updates are grouped by person (committer/merger), at the top of the file.
All entries are dated according to merging into the code in dev branch. THIS MEANS THE CODE MAY
NOT BE PRESENT IN THE STABLE BRANCH
For details of when a commit makes it into the stable branch see the ReleaseNotes file.


2018-11-05 niel
	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.8.12.0


2018-10-30 niel
	Mrg: fix-mediainfo branch. Adds support for mediaInfo's new format in v17.12+
2018-10-27 niel
	Fix: Post-decrement (instead of pre-decrement) $total dumps counter to make it correct for
		output. This will prevent the "-1 dumps remaining message".
2018-10-23 niel
	Add: New anime title regex in PPA to capture more titles correctly.
	Chg: Altered 'Complete Sequential' to 'Custom Sequential' in tmux settings, to avoid confusion
		of people thinking it is more complete than Simple.
	Chg: Update meaning of type field in videos table.
	Add: Videos controller, model, and tests.
2018-10-17 niel
	Fix: Make generic music subject regex actually match the example. Simplify returns for
		CollectionsCleaning::generic() method.
	Fix: Remove $this->e0. No need to duplicate the constant.
2018-10-12 niel
	Chg: Rename updateTimeCheck function to updatedRecently. Change it to return true if the entry
		was updated within the last week, false otherwise.
2018-10-03 niel
	Fix: Make sure newly activated groups have TPG tables, if TPG mode is enabled and MGR mode is not.
2018-10-02 niel
	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.8.11.0


2018-09-18 niel
	Fix: Updated scripts in .../misc/testing/DB to use modern require_once syntax (instead of
		nesting multiple dirname() calls. Also added a new require_once to two scripts that need
		.../configuration/settings.php to run. Note they will cause an error if the file does not
		exist, but it should be obvious to the user what the problem is.