@@ -10,6 +10,8 @@ NOT BE PRESENT IN THE STABLE BRANCH
 For details of when a commit makes it into the stable branch see the ReleaseNotes file.
 
 
+2018-11-11 niel
+	Fix: Attempt to improve accuracy of PreDb matching. Addresses issue #2568.
 2018-11-05 niel
 	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.8.12.0
 
